--- a/index.html
+++ b/index.html
@@ -4180,7 +4180,7 @@ ul {
         Adaptive Hashing Encryption
       </h1>
       <p style="margin: 0 0 24px; font-size: clamp(15px, 2.2vw, 22px); color: #c9efe6;"  >
-        Where data becomes invincible — ultra-fast, secure, and scalable encryption for the quantum age.
+        Website under construction.
       </p>
 
       <!-- CTAs -->
