Update image source for AR Marker

--- a/index.html
+++ b/index.html
@@ -8380,9 +8380,10 @@ function toggleChat() {
 </script>
 
 
+
 <div id="login-overlay">
   <div class="login-box">
-    <img src="C:\Users\Administrator\Downloads\site\assets\marker.png" alt="AR Marker" class="marker-img" />
+    <img src="marker.png" alt="AR Marker" class="marker-img" />
     <h2>Welcome! Scan the AR Marker to Login</h2>
     <p id="status-text">Initializing…</p>
   </div>
@@ -8494,7 +8495,6 @@ function toggleChat() {
     }
   });
 </script>  
-
 
 <footer class="site-footer">
   <div class="ticker-label">Cybersecurity Intel Feed</div>
