--- a/index.html
+++ b/index.html
@@ -4401,8 +4401,8 @@ ul {
   <span class="bottom-key-rare-2"></span>
 </button>
 </div>
-<audio id="ahe-intro" src="C:/Users/Administrator/Music/AHE Intro VO 1 (Processed).wav" class="sr-only"></audio>
-<audio id="thread-brief" src="C:/Users/Administrator/Music/AHE Intro VO 2 (Processed).wav" class="sr-only"></audio>
+<audio id="ahe-intro" src="vo1.wav" class="sr-only"></audio>
+<audio id="v2.wav" class="sr-only"></audio>
        <div class="explainer-buttons">
 
   <button class="concept-btn" data-audio="adaptive-note" aria-controls="adaptive-audio">
