Update audio source and image path in index.html

--- a/index.html
+++ b/index.html
@@ -4402,7 +4402,7 @@ ul {
 </button>
 </div>
 <audio id="ahe-intro" src="vo1.wav" class="sr-only"></audio>
-<audio id="v2.wav" class="sr-only"></audio>
+<audio id="thread-brief" src="v2.wav" class="sr-only"></audio>
        <div class="explainer-buttons">
 
   <button class="concept-btn" data-audio="adaptive-note" aria-controls="adaptive-audio">
@@ -8383,7 +8383,7 @@ function toggleChat() {
 
 <div id="login-overlay">
   <div class="login-box">
-    <img src="marker.png" alt="AR Marker" class="marker-img" />
+    <img src="C:\Users\Administrator\Downloads\site\assets\marker.png" alt="AR Marker" class="marker-img" />
     <h2>Welcome! Scan the AR Marker to Login</h2>
     <p id="status-text">Initializing…</p>
   </div>
