--- a/index.html
+++ b/index.html
@@ -4302,6 +4302,26 @@ ul {
   <span class="bottom-key-rare-1"></span>
   <span class="bottom-key-rare-2"></span>
 </button>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const buttons = document.querySelectorAll("[data-audio]");
+
+    buttons.forEach(button => {
+      button.addEventListener("click", () => {
+        const audioId = button.getAttribute("data-audio");
+        const audioElement = document.getElementById(audioId);
+
+        if (audioElement) {
+          audioElement.currentTime = 0; // restart from beginning
+          audioElement.play();
+        } else {
+          console.warn(`Audio element with ID "${audioId}" not found.`);
+        }
+      });
+    });
+  });
+</script>
+
 <style>
 .fancy-rare {
   position: relative;
@@ -4402,7 +4422,8 @@ ul {
 </button>
 </div>
 <audio id="ahe-intro" src="vo1.wav" class="sr-only"></audio>
-<audio id="thread-brief" src="v2.wav" class="sr-only"></audio>
+<audio id="v2" src="v2.wav" class="sr-only"></audio>
+
        <div class="explainer-buttons">
 
   <button class="concept-btn" data-audio="adaptive-note" aria-controls="adaptive-audio">
@@ -5405,7 +5426,7 @@ worldBtn.addEventListener('click', () => {
   padding: 20px 24px;
   margin: 0 auto;
   backdrop-filter: blur(7.61px) saturate(15%);
-  background: rgba(10, 10, 15, 0.35);
+  background: rgba(10, 10, 15, 0.55);
   box-shadow: 0 8px 48px rgba(0, 255, 255, 0.25);
   border: 1px solid rgba(20, 242, 224, 0.3);
   position: relative;
@@ -8383,7 +8404,7 @@ function toggleChat() {
 
 <div id="login-overlay">
   <div class="login-box">
-    <img src="C:\Users\Administrator\Downloads\site\assets\marker.png" alt="AR Marker" class="marker-img" />
+    <img src="marker.png" alt="AR Marker" class="marker-img" />
     <h2>Welcome! Scan the AR Marker to Login</h2>
     <p id="status-text">Initializing…</p>
   </div>
