Change background color in index.html

--- a/index.html
+++ b/index.html
@@ -5426,7 +5426,7 @@ worldBtn.addEventListener('click', () => {
   padding: 20px 24px;
   margin: 0 auto;
   backdrop-filter: blur(7.61px) saturate(15%);
-  background: rgba(10, 10, 15, 0.55);
+  background: #fdfdfd3d;
   box-shadow: 0 8px 48px rgba(0, 255, 255, 0.25);
   border: 1px solid rgba(20, 242, 224, 0.3);
   position: relative;
