--- a/index.html
+++ b/index.html
@@ -8404,9 +8404,9 @@ function toggleChat() {
 
 <div id="login-overlay">
   <div class="login-box">
-    <img src="marker.png" alt="AR Marker" class="marker-img" />
+    <img src="marker1.png" alt="AR Marker" class="marker-img" />
     <h2>Welcome! Scan the AR Marker to Login</h2>
-    <p id="status-text">Initializing…</p>
+    <p id="status-text">Welcome to the new way of Security</p>
   </div>
 </div>
 
