--- a/index.html
+++ b/index.html
@@ -4475,7 +4475,7 @@ ul {
 
 <div id="login-overlay">
   <div class="login-box">
-    <img src="marker1.png" alt="AR Marker" class="marker-img1" />
+    <img src="C:\Users\Administrator\Downloads\marker1.png" alt="AR Marker" class="marker-img1" />
     <h2>Welcome to the new way of Security</h2>
     <p id="status-text"> Initializing...</p>
 
@@ -6227,8 +6227,8 @@ body {
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       margin-top: 0;
       color: #95b6a9;
-      background-color: #0097a7;
-      opacity: 0.4;
+      
+      
     }
 
     @media (max-width: 900px) {
